--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   dots_indicator: ^2.1.0
+  shared_preferences: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
