--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.6.5
   dots_indicator: ^2.1.0
   shared_preferences: ^2.1.0
+  intl: ^0.18.0
 
 
   # The following adds the Cupertino Icons font to your application.
